Fix dark mode menu icon color
See gh-989

--- a/sagan-client/src/css/dark.scss
+++ b/sagan-client/src/css/dark.scss
@@ -528,5 +528,14 @@ body.dark {
     border-bottom-color: lighten($dark-border-color, 5);
   }
 
+  #hamburger .burger-bar {
+    color: white;
+    background: white;
+  }
+
+  #hamburger:hover .burger-bar {
+    background: #6db33f;
+  }
+
   @import 'prettify';
 }
